tests/test_templates/others/ip6_security_groups_open_to_world.json
{
  "Resources": {
    "InstanceSecurityGroup4": {
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "SecurityGroupIngress": [
          {
            "FromPort": "22",
            "CidrIpv6": "2001:800::/21",
            "ToPort": "22",
            "IpProtocol": "tcp"
          }
        ],
        "GroupDescription": "InstanceSecurityGroup4"
      },
      "Type": "AWS::EC2::SecurityGroup",
      "DependsOn": [
        "Subnet"
      ]
    },
    "RouteTable": {
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        }
      },
      "Type": "AWS::EC2::RouteTable"
    },
    "SubnetIPv6": {
      "Type": "AWS::EC2::SubnetCidrBlock",
      "Properties": {
        "Ipv6CidrBlock": {
          "Fn::Join": [
            "",
            [
              {
                "Fn::Select": [
                  0,
                  {
                    "Fn::Split": [
                      "::",
                      {
                        "Fn::Select": [
                          0,
                          {
                            "Fn::GetAtt": [
                              "VPC",
                              "Ipv6CidrBlocks"
                            ]
                          }
                        ]
                      }
                    ]
                  }
                ]
              },
              "::dead:beef/64"
            ]
          ]
        },
        "SubnetId": {
          "Ref": "Subnet"
        }
      },
      "DependsOn": [
        "VPC",
        "VPCIPv6"
      ]
    },
    "InstanceSecurityGroup3": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "InstanceSecurityGroup3",
        "SecurityGroupIngress": [
          {
            "ToPort": "22",
            "CidrIpv6": "::/0",
            "FromPort": "22",
            "IpProtocol": "tcp"
          }
        ],
        "VpcId": {
          "Ref": "VPC"
        }
      },
      "DependsOn": [
        "Subnet"
      ]
    },
    "VPCIPv6": {
      "Properties": {
        "AmazonProvidedIpv6CidrBlock": true,
        "VpcId": {
          "Ref": "VPC"
        }
      },
      "Type": "AWS::EC2::VPCCidrBlock"
    },
    "InstanceSecurityGroup": {
      "DependsOn": [
        "Subnet"
      ],
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "SecurityGroupIngress": [
          {
            "FromPort": "22",
            "CidrIpv6": "0000:0000:0000:0000:0000:0000:0000:0000/0",
            "ToPort": "22",
            "IpProtocol": "tcp"
          }
        ],
        "GroupDescription": "InstanceSecurityGroup"
      }
    },
    "VPC": {
      "Properties": {
        "EnableDnsSupport": true,
        "Tags": [
          {
            "Value": "IPv6",
            "Key": "Name"
          }
        ],
        "CidrBlock": "10.0.0.0/16",
        "InstanceTenancy": "default",
        "EnableDnsHostnames": true
      },
      "Type": "AWS::EC2::VPC"
    },
    "InstanceSecurityGroup2": {
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "SecurityGroupIngress": [
          {
            "CidrIpv6": "0000::/0",
            "FromPort": "22",
            "ToPort": "22",
            "IpProtocol": "tcp"
          }
        ],
        "GroupDescription": "InstanceSecurityGroup2"
      },
      "Type": "AWS::EC2::SecurityGroup",
      "DependsOn": [
        "Subnet"
      ]
    },
    "Subnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/24",
        "VpcId": {
          "Ref": "VPC"
        },
        "MapPublicIpOnLaunch": false
      }
    },
    "RouteSubnet": {
      "DependsOn": [
        "RouteTable",
        "Subnet"
      ],
      "Properties": {
        "SubnetId": {
          "Ref": "Subnet"
        },
        "RouteTableId": {
          "Ref": "RouteTable"
        }
      },
      "Type": "AWS::EC2::SubnetRouteTableAssociation"
    }
  }
}
